--- a/ansible/P1/WF/mfa_auth_policy_set.yml
+++ b/ansible/P1/WF/mfa_auth_policy_set.yml
@@ -1,3 +1,22 @@
+- name: Get Token
+  uri:
+    url: '{{TOKEN_ENDPOINT}}'
+    method: POST
+    url_username: "{{ CLIENT_ID }}"
+    url_password: "{{ CLIENT_SECRET }}"
+    force_basic_auth: True
+    body:
+      "grant_type=client_credentials"
+    headers:
+      Content-Type: 'application/x-www-form-urlencoded'
+    status_code: 200
+  register: client_token_get
+  retries: 2
+
+- name: Set API Token
+  set_fact:
+    WORKER_APP_ACCESS_TOKEN: "{{ client_token_get.json.access_token }}"
+
 - name: WF Auth Policy Get Population
   uri:
     url: '{{ API_LOCATION }}/environments/{{ ENV_ID }}/populations'
