--- a/ansible/P1/WF/user_pop_set.yml
+++ b/ansible/P1/WF/user_pop_set.yml
@@ -1,3 +1,22 @@
+- name: Get Token
+  uri:
+    url: '{{TOKEN_ENDPOINT}}'
+    method: POST
+    url_username: "{{ CLIENT_ID }}"
+    url_password: "{{ CLIENT_SECRET }}"
+    force_basic_auth: True
+    body:
+      "grant_type=client_credentials"
+    headers:
+      Content-Type: 'application/x-www-form-urlencoded'
+    status_code: 200
+  register: client_token_get
+  retries: 2
+
+- name: Set API Token
+  set_fact:
+    WORKER_APP_ACCESS_TOKEN: "{{ client_token_get.json.access_token }}"
+
 - name: WF User Populations Get
   uri:
     url: '{{ API_LOCATION }}/environments/{{ ENV_ID }}/populations'
@@ -10,11 +29,11 @@
 
 
 - name: WF User Populations Check
-  set_fact: 
-    list_pops: "{{ pop_check.json._embedded.populations | map(attribute='name') | list }}"                              
+  set_fact:
+    list_pops: "{{ pop_check.json._embedded.populations | map(attribute='name') | list }}"
 
 - name: WF User Population Check Sample Users ID
-  set_fact:  
+  set_fact:
     sample_users: "{{ pop_check.json._embedded.populations |
                     selectattr('name', 'match', 'Sample Users') |
                     map(attribute='id') | list | first }}"
