Passwordless Any Method Policy all methods true

--- a/ansible/P1/CIAM/auth_policy_set.yml
+++ b/ansible/P1/CIAM/auth_policy_set.yml
@@ -277,16 +277,16 @@
             "enabled": true
         },
         "boundBiometrics": {
-            "enabled": false
+            "enabled": true
         },
         "authenticator": {
-            "enabled": false
+            "enabled": true
         },
         "email": {
-            "enabled": false
+            "enabled": true
         },
         "securityKey": {
-            "enabled": false
+            "enabled": true
         }
       }
     body_format: json
